# TCP_BOT

./: .gitignore  CMakeLists.txt  wireshark.pcapng
src/: bot.cpp  bot.h  main.cpp
src/include/: bot.cpp  bot.h  entity.cpp  entity.h  varTypes.cpp  varTypes.h
